[gd_scene load_steps=8 format=2]

[ext_resource path="res://Components/sound_player/sound_player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Misc/generic.png" type="Texture" id=2]
[ext_resource path="res://Entities/Item_Pickups/item.gd" type="Script" id=3]
[ext_resource path="res://Components/sprite/shadow1.png" type="Texture" id=4]
[ext_resource path="res://Effects/item_pickup_effect/item_pickup_effect.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CircleShape2D" id=2]

[node name="item" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 33
script = ExtResource( 3 )
INANIMATE = true
truName = "(item)"
faction = "player"
ITEM_PICKUP_EFFECT = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="shadow" type="Sprite" parent="Sprite"]
self_modulate = Color( 1, 1, 1, 0.333333 )
show_behind_parent = true
position = Vector2( 0, 2 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="sound_player" parent="." instance=ExtResource( 1 )]
FREE_WHEN_EMPTY = false

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
